--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node": ">=4.0.0"
   },
   "dependencies": {
+    "caniuse-component": "^0.1.1",
     "express": "~4.14.0",
     "grunt-cli": "~1.2.0",
     "mustache": "~2.2.1",
